--- a/destinymap/index.html
+++ b/destinymap/index.html
@@ -2,6 +2,7 @@
 	<head></head>
 	<body>
 		<div id='myMap'></div>
+		<script type='text/javascript' src='js/jquery.js'></script>
 		<script type='text/javascript' src='https://www.bing.com/api/maps/mapcontrol?callback=loadMapScenario' async defer></script>
 		<script type="text/javascript" src='js/index.js'></script>
 	</body>
