--- a/destinymap/index.html
+++ b/destinymap/index.html
@@ -1,5 +1,7 @@
 <html>
-	<head></head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+	</head>
 	<body>
 		<div id='myMap'></div>
 		<script type='text/javascript' src='js/jquery.js'></script>
